Correction d'alignement au format tablette sur la page principale (section fonctionnement)

--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@
   margin: 0;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1036px) {
   .functioning {
-    max-width: 1024px;
+    max-width: 1036px;
     margin: auto;
   }
   .functioning-insert {
